traversal.line.traversalbyline.TraversalByLine.scala.error
Compilation error:
TraversalByLine:21: error: expected start of definition
	override def forward(i:Int)  { 
                 ^TraversalByLine:24: error: expected start of definition
	override def forward()  {
                 ^TraversalByLine:27: error: expected start of definition
	override def backward(i:Int) {
                 ^TraversalByLine:30: error: expected start of definition
	override def backward() {
                 ^TraversalByLine:33: error: Unmatched closing brace '}' ignored here
}
^